--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>记录自己踩过的坑</title>
+  <title>记录总结</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
@@ -17,7 +17,7 @@
   <div id="app">加载中</div>
   <script>
     window.$docsify = {
-      name: '记录自己踩过的坑',
+      name: '加油！！！打工人！！！',
       repo: '',
       loadSidebar: true,
       sidebarDisplayLevel: 1,
