--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
 </head>
 
 <body>
+  <!-- <nav>
+    <a href="#/bug/readme">踩过的坑</a>
+    <a href="#/remember/readme">知识点</a>
+    <a href="#/code/readme">工具代码</a>
+    <a href="#/append/readme">附录</a>
+  </nav> -->
   <div id="app">加载中</div>
   <script>
     window.$docsify = {
@@ -23,6 +29,9 @@
       repo: '',
       loadSidebar: true,
       sidebarDisplayLevel: 1,
+      coverpage: true,
+      coverpage: true,
+      onlyCover: true,
     }
   </script>
   <!-- Docsify v4 -->
