--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       name: '加油！！！打工人！！！',
       repo: '',
       loadSidebar: true,
-      loadNavbar: true,
+      //loadNavbar: true,
       sidebarDisplayLevel: 1,
       coverpage: true,
       coverpage: true,
